terraform/infra/ingress/kong/examples/gateway-kiali.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  gatewayClassName: kong
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: kind.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: root-certificate

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-route
  namespace: istio-system
#  annotations:
#    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - name: kiali-gateway
      sectionName: https
  hostnames:
    - kind.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          port: 20001
